# LuaPbIntf

./: .gitignore  .luacheckrc  LICENSE  README.md  conanfile.py  todo.md
doc/: reference.md
docker/: README.md
docker/xenial/: Dockerfile
luapbintf/: luapbintf.lua
luapbintf/detail/: message_metatable.lua
premake/: README.md  premake5.bat  premake5.lua
src/: CMakeLists.txt  LuaPbIntf.cpp  luapbintf.lua
src/detail/: Config.h  Encoder.cpp  Encoder.h  FieldSetter.cpp  FieldSetter.h  GetMessageField.cpp  GetMessageField.h  LuaPbIntfImpl.cpp  LuaPbIntfImpl.h  MessageGetField.cpp  MessageGetField.h  MessageSetField.cpp  MessageSetField.h  MessageSetter.cpp  MessageSetter.h  MessageSptr.h  MsgToTbl.cpp  MsgToTbl.h
test/: README.md  common.proto  copy_luapbintf_dll.bat.example  copy_luapbintf_dll_and_lua.bat.example  test.lua  test.proto
test_package/: conanfile.py  example.cpp
